# OxMgr

./: .gitignore  .taplo.toml  0_Test (windows-latest).txt  1_Test (ubuntu-latest).txt  2_Test (macos-latest).txt  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  benchmark.json  build.rs
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  ci.yml  download-metrics.yml  release.yml
apt/: index.html
apt/keyrings/: oxmgr-archive-keyring.asc  oxmgr-archive-keyring.gpg
docs/: ARCHITECTURE.md  BENCHMARKS.md  BUNDLES.md  CLI.md  DEPLOY.md  DOWNLOAD_METRICS.md  OXFILE.md  OXFILE_VS_PM2.md  PULL_WEBHOOK.md  README.md  RELEASE.md  RUNTIME.md  SKILL.md  UI.md  USAGE.md  install.md
docs/examples/: oxfile.apply-idempotent.toml  oxfile.minimal.toml  oxfile.monorepo.toml  oxfile.profiles.toml  oxfile.web-stack.toml
downloads/: data.json  index.html
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/choco/: oxmgr.nuspec.template
packaging/npm/: README.md  package.json
schemas/: oxfile.schema.json
scripts/: benchmark_oxmgr_vs_pm2.py  build_apt_repo.sh  generate_aur_pkgbuild.sh  generate_aur_srcinfo.sh  generate_download_metrics.py  generate_homebrew_formula.sh  smoke_packaging.sh
src/: bundle.rs  cgroup.rs  cli.rs  config.rs  daemon.rs  ecosystem.rs  env_expand.rs  errors.rs  events.rs  hash.rs  ipc.rs  js_config.rs  logging.rs  main.rs  oxfile.rs  process.rs  process_manager.rs  storage.rs  ui.rs
src/commands/: apply.rs  common.rs  convert.rs  daemon_stop.rs  delete.rs  (+19 more)
tests/: e2e_cli.rs
(+64 files in other folders)
