[package]
name = "oxmgr"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Oxmgr - lightweight language-agnostic process manager"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
sysinfo = "0.33"
thiserror = "1.0"
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "process",
    "signal",
    "fs",
    "time",
    "io-util",
    "sync",
] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "user"] }

[dev-dependencies]
serial_test = "3.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
